--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-app-rewired": "^2.0.3",
     "react-dom": "^16.7.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.3"
+    "react-scripts": "2.1.3",
+    "fetch-jsonp": "^1.1.3"
   },
   "scripts": {
     "start": "react-app-rewired start",
